# Chat

./: CMakeLists.txt
include/client/gui/: chat_client_widget.hpp
include/client/logic/: client.hpp
include/client/networking/: tcp_connector.hpp
include/common/: defines.hpp  includes.hpp
include/common/data/: participant.hpp
include/common/data/messages/: messages.hpp
include/common/data/messages/serialization/: abstract.hpp  binary.hpp
include/common/gui/: input_filter.hpp
include/common/networking/: abstract_msg_chan.hpp  message_channel.hpp  message_channel_impl.hpp  resolver.hpp  sockets.hpp
include/server/gui/: chat_server_widget.hpp
include/server/logic/: server.hpp
include/server/networking/: tcp_acceptor.hpp
libs/: CMakeLists.txt
libs/serialization/: CMakeLists.txt
libs/serialization/cmake/: common.cmake
libs/serialization/include/serialization/: concepts.hpp  defines.hpp  includes.hpp  serialization.hpp
libs/serialization/include/serialization/binary/: binary.hpp  format.hpp
libs/serialization/include/serialization/binary/predefined/: boost.hpp  class.hpp  fundamental.hpp  qt.hpp  std.hpp
libs/serialization/include/serialization/binary/predefined/detail/: algorithm.hpp
libs/serialization/src/serialization/binary/: format.cpp
libs/serialization/tests/: CMakeLists.txt
src/client/: main.cpp
src/client/gui/: chat_client_widget.cpp
src/client/logic/: client.cpp
src/client/networking/: tcp_connector.cpp
src/common/: resolver.cpp
src/common/data/: participant.cpp
src/common/data/messages/: messages.cpp
src/common/gui/: input_filter.cpp
src/common/networking/: message_channel_impl.cpp
src/server/: main.cpp
src/server/gui/: chat_server_widget.cpp
src/server/logic/: server.cpp
src/server/networking/: tcp_acceptor.cpp
ui/client/: client_widget.ui
ui/common/: console_log.ui
ui/server/: server_widget.ui
